examples/neg/multi_arity_match_arity.effekt
def foo[A, B, C](a: A, b: B){ fn: (A, B) => C }: C = {
  fn(a, b)
}

def main() = {
  foo(1, 2){
    case _, _ => ()
    case _, _, _ => () // ERROR Number of patterns
  }
}